--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -19,5 +19,5 @@
 @import "extras/menu.less";
 @import "extras/gallery.less";
 @import "extras/materialfont.less";
-@import "font-awesome/font-awesome.less";
-@import "extras/an.less";
+@import "fontawesome/font-awesome.less";
+@import "extras/animations.less";
